--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "",
   "main": "alternative.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node ./node/app.js",
+    "dev": "nodemon ./node/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "express": "^5.2.1",
     "lodash": "^4.17.23",
     "mongoose": "^9.1.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
-  }
+  },
+  "types": "module"
 }
